--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="C:/junit/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/junit/junit.jar"/>
+	<classpathentry kind="lib" path="C:/junit/junit-4.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
